@@ -38,6 +38,7 @@
 * Dev - Revised options, welcome, notice processing sanitation to use own API functions.
 * Dev - Revised posts etc. admin screens sanitation to use own API funtions, revised logic and removed unused declarations.
 * Dev - Revised users and user profile screen sanitation to use own API functions.
+* Fix - Revised instances of missing output escaping.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
